--- a/menu_2_la_note_enchantée.html
+++ b/menu_2_la_note_enchantée.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <link rel="stylesheet" type="text/css" href="CSS/Styles.css">
     <link rel="stylesheet" type="text/css" href="CSS/Normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&family=Shrikhand&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@@ -12,5 +13,86 @@
     <title>Menu - La note enchantée</title>
     <body>
         <header> <!--logo-->
-            <img class="logo" src="" alt="Ohmyfood"/>
+            <nav class="back-arrow"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></nav>
+                <img class="logo" src="images/ohmyfood.png" alt="Ohmyfood"/>
         </header>
+        <main><!--MENU 2 la note enchantée-->
+            <section id="menu-card"><!--haut de la carte menu-->
+                <img class="menu-card__image" src="images/menu_2.jpg" alt="La note enchantée>
+                    <div class="menu-card__top">
+                        <h1 class="menu-card__title">La note enchantée</h1>
+                            <i class="fa-thin fa-heart"></i>
+                    </div>
+                    <div class="entrance"><!--les entrées-->
+                        <h2 class="meal__title">entrées</h2>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Ravioles de foie gras</h3>
+                                    <p class="card-meal__desc">Accompagnés de leur crème à la truffe</p>
+                                        <p class="card-meal__price">25€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Caviar osciètre</h3>
+                                    <p class="card-meal__desc">Sur blini à la farine de blé noir</p>
+                                        <p class="card-meal__price">35€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Homard et espuma de potiron</h3>
+                                    <p class="card-meal__desc">Mariné aux zestes d'orange</p>
+                                        <p class="card-meal__price">20€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Foie gras de canard cuit entier</h3>
+                                    <p class="card-meal__desc">Confiture de figue et pain toasté</p>
+                                        <p class="card-meal__price">35€</p>
+                            </div>
+                    </div>
+                    <div class="dish"><!--les plats-->
+                        <h2 class="meal__title">plats</h2>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Noix de coquilles Saint-Jacques</h3>
+                                    <p class="card-meal__desc">Sur lit de purée de céleri-rave</p>
+                                        <p class="card-meal__price">40€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Langoustine poêlée</h3>
+                                    <p class="card-meal__desc">Purée de patate douce</p>
+                                        <p class="card-meal__price">35€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Mijoté de queue de boeuf</h3>
+                                    <p class="card-meal__desc">Et riz sauvage aux zests de citron</p>
+                                        <p class="card-meal__price">44€</p>
+                            </div>
+                    </div>
+                    <div class="dessert"><!--les desserts-->
+                        <h2 class="meal__title">desserts</h2>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Macaron noisette et chocolat</h3>
+                                    <p class="card-meal__desc">Glace au caramel brun et sel de Guérande</p>
+                                        <p class="card-meal__price">18€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Baba au rhum revisité</h3>
+                                    <p class="card-meal__desc">Avec son coulis de citron</p>
+                                        <p class="card-meal__price">22€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Tarte au citron meringuée</h3>
+                                    <p class="card-meal__desc">Destructurée</p>
+                                        <p class="card-meal__price">23€</p>
+                            </div>
+                    </div>
+            </section><!--bouton "commander"-->
+            <button class="button--purple">Commander</button>
+        </main>
+        <footer><!--footer-->
+            <h4 class="footer__title">ohmyfood</h4>
+                <ul>
+                    <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+                    <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+                    <li>Mentions légales</li>
+                    <li>Contact</li>
+                </ul>
+        </footer>
+    </body>
+</html>    
