--- a/menu_3_à_la_française.html
+++ b/menu_3_à_la_française.html
@@ -5,12 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <link rel="stylesheet" type="text/css" href="CSS/Styles.css">
     <link rel="stylesheet" type="text/css" href="CSS/Normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&family=Shrikhand&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
     </style> 
-    <title>Menu - À la française/title>
+    <title>Menu - À la française</title>
     <body>
         <header> <!--logo-->
-            <img class="logo" src="" alt="Ohmyfood"/>
+            <nav class="back-arrow"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></nav>
+                <img class="logo" src="images/ohmyfood.png" alt="Ohmyfood"/>
         </header>
+        <main><!--MENU 3 à la française-->
+            <section id="menu-card"><!--haut de la carte menu-->
+                <img class="menu-card__image" src="images/menu_3.jpg" alt="À la française">
+                    <div class="menu-card__top">
+                        <h1 class="menu-card__title">À la française</h1>
+                            <i class="fa-thin fa-heart"></i>
+                    </div>
+                    <div class="entrance"><!--les entrées-->
+                        <h2 class="meal__title">entrées</h2>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Tartare de poulpe acidulé</h3>
+                                    <p class="card-meal__desc">Aux zests d'orange</p>
+                                        <p class="card-meal__price">25€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Velouté de légumes d'antan</h3>
+                                    <p class="card-meal__desc">Carotte, panais, topinambour</p>
+                                        <p class="card-meal__price">35€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Soupe à l'oignon</h3>
+                                    <p class="card-meal__desc">Revisitée</p>
+                                        <p class="card-meal__price">20€</p>
+                            </div>
+                    </div>
+                    <div class="dish"><!--les plats-->
+                        <h2 class="meal__title">plats</h2>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Coquilles Saint-Jacques</h3>
+                                    <p class="card-meal__desc">Accompagnées d'une purée de panais</p>
+                                        <p class="card-meal__price">40€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Magret de canard</h3>
+                                    <p class="card-meal__desc">Et parmentier de pommes de terres</p>
+                                        <p class="card-meal__price">35€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Pigeonneau d'Ille-et-Vilaine</h3>
+                                    <p class="card-meal__desc">Sur son lit de gnocchis aux légumes</p>
+                                        <p class="card-meal__price">44€</p>
+                            </div>
+                    </div>
+                    <div class="dessert"><!--les desserts-->
+                        <h2 class="meal__title">desserts</h2>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Pétales de violettes glacés</h3>
+                                    <p class="card-meal__desc">Et purée de noisettes</p>
+                                        <p class="card-meal__price">18€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Fondant au chocolat</h3>
+                                    <p class="card-meal__desc">Revisité</p>
+                                        <p class="card-meal__price">22€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Millefeuille croustillant</h3>
+                                    <p class="card-meal__desc">Myrtilles et pâte d'amande</p>
+                                        <p class="card-meal__price">23€</p>
+                            </div>
+                    </div>
+            </section><!--bouton "commander"-->
+            <button class="button--purple">Commander</button>
+        </main>
+        <footer><!--footer-->
+            <h4 class="footer__title">ohmyfood</h4>
+                <ul>
+                    <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+                    <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+                    <li>Mentions légales</li>
+                    <li>Contact</li>
+                </ul>
+        </footer>
+    </body>
+</html>
