--- a/menu_4_le_délice_des_sens.html
+++ b/menu_4_le_délice_des_sens.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <link rel="stylesheet" type="text/css" href="CSS/Styles.css">
     <link rel="stylesheet" type="text/css" href="CSS/Normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&family=Shrikhand&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
@@ -12,5 +13,81 @@
     <title>Menu - Le délice des sens</title>
     <body>
         <header> <!--logo-->
-            <img class="logo" src="" alt="Ohmyfood"/>
+            <nav class="back-arrow"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></nav>
+                <img class="logo" src="images/ohmyfood.png" alt="Ohmyfood"/>
         </header>
+        <main><!--MENU 4 le délice des sens-->
+            <section id="menu-card"><!--haut de la carte menu-->
+                <img class="menu-card__image" src="images/menu_4.jpg" alt="Le délice des sens">
+                    <div class="menu-card__top">
+                        <h1 class="menu-card__title">Le délice des sens</h1>
+                            <i class="fa-thin fa-heart"></i>
+                    </div>
+                    <div class="entrance"><!--les entrées-->
+                        <h2 class="meal__title">entrées</h2>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Tartare de thon</h3>
+                                    <p class="card-meal__desc">Assaisonné au yuzu</p>
+                                        <p class="card-meal__price">25€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Bouchée de homard croustillant</h3>
+                                    <p class="card-meal__desc">Et sa farandole de petits légumes</p>
+                                        <p class="card-meal__price">35€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Velouté de cèpes</h3>
+                                    <p class="card-meal__desc">Aux truffes</p>
+                                        <p class="card-meal__price">20€</p>
+                            </div>
+                    </div>
+                    <div class="dish"><!--les plats-->
+                        <h2 class="meal__title">plats</h2>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Poulet rôti aux herbes de provence</h3>
+                                    <p class="card-meal__desc">Et sa crème de truffe</p>
+                                        <p class="card-meal__price">40€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Langouste rôtie</h3>
+                                    <p class="card-meal__desc">Et ses légumes de saison</p>
+                                        <p class="card-meal__price">35€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Côte de boeuf angus</h3>
+                                    <p class="card-meal__desc">Et sa purée de panais</p>
+                                        <p class="card-meal__price">44€</p>
+                            </div>
+                    </div>
+                    <div class="dessert"><!--les desserts-->
+                        <h2 class="meal__title">desserts</h2>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Farandole de desserts</h3>
+                                    <p class="card-meal__desc">Du chef</p>
+                                        <p class="card-meal__price">18€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Crème brulée</h3>
+                                    <p class="card-meal__desc">Revisitée</p>
+                                        <p class="card-meal__price">22€</p>
+                            </div>
+                            <div class="card-meal">
+                                <h3 class="card-meal__name">Tiramisu</h3>
+                                    <p class="card-meal__desc">À la noisette</p>
+                                        <p class="card-meal__price">23€</p>
+                            </div>
+                    </div>
+            </section><!--bouton "commander"-->
+            <button class="button--purple">Commander</button>
+        </main>
+        <footer><!--footer-->
+            <h4 class="footer__title">ohmyfood</h4>
+                <ul>
+                    <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+                    <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
+                    <li>Mentions légales</li>
+                    <li>Contact</li>
+                </ul>
+        </footer>
+    </body>
+</html>
