--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
     <meta charset ="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
+    <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CSS/Styles.css">
     <link rel="stylesheet" type="text/css" href="CSS/Normalize.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css" integrity="sha512-1hsteeq9xTM5CX6NsXiJu3Y/g+tj+IIwtZMtTisemEv3hx+S9ngaW4nryrNcPM4xGzINcKbwUJtojslX2KG+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&family=Shrikhand&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
+        @import url('https://fonts.googleapis.com/css2? family=Roboto:wght@100;300;400;500;700;900&display=swap');
     </style> 
     <title>Ohmyfood - Accueil</title>
     <body>
@@ -29,17 +28,17 @@
                 <h2 class="function__title">Fonctionnement</h2>
                     <div class="function-card__container">
                         <div class="function-card--number">1</div>
-                            <i class="fa-solid fa-mobile-screen-button"></i>
+                            <i class="fa-function fa-solid fa-mobile-screen-button"></i>
                                 <h3 class="function-card__title">Choisissez un restaurant</h3>
                     </div>
                     <div class="function-card__container">
                         <div class="function-card--number">2</div>
-                            <i class="fa-solid fa-list-ul"></i>
+                            <i class="fa-function fa-solid fa-list-ul"></i>
                                 <h3 class="function-card__title">Composez votre menu</h3>
                     </div> 
                     <div class="function-card__container">
                         <div class="function-card--number">3</div>
-                            <i class="fa-solid fa-store"></i>
+                            <i class="fa-function fa-solid fa-store"></i>
                                 <h3 class="function-card__title">Dégustez au restaurant</h3>
                     </div>
             </section>
@@ -50,7 +49,7 @@
                             <img class="restaurant__img" src="images/menu_1.jpg" alt="La palette du goût"/>
                                 <h3 class="restaurant__title">La palette du goût</h3>
                                     <p class="restaurant__location">Ménilmontant</p>
-                                        <i class="fa-thin fa-heart"></i>
+                                        <i class="fa-regular fa-heart"></i>
                         </a>                
                     </div>
                     <div class="restaurant-card__container"><!--menu 2-->
@@ -58,7 +57,7 @@
                             <img class="restaurant__img" src="images/menu_2.jpg" alt="La note enchantée"/>
                                 <h3 class="restaurant__title">La note enchantée</h3>
                                     <p class="restaurant__location">Charonne</p>
-                                        <i class="fa-thin fa-heart"></i>
+                                        <i class="fa-regular fa-heart"></i>
                         </a>
                     </div>
                     <div class="restaurant-card__container"><!--menu 3-->
@@ -66,7 +65,7 @@
                             <img class="restaurant__img" src="images/menu_3.jpg" alt="À la française"/>
                                 <h3 class="restaurant__title">À la française</h3>
                                     <p class="restaurant__location">Cité Rouge</p>
-                                        <i class="fa-thin fa-heart"></i>
+                                        <i class="fa-regular fa-heart"></i>
                         </a>
                     </div>
                     <div class="restaurant-card__container"><!--menu 4-->
@@ -74,7 +73,7 @@
                             <img class="restaurant__img" src="images/menu_4.jpg" alt="Le délice des sens"/>
                                 <h3 class="restaurant__title">Le délice des sens</h3>
                                     <p class="restaurant__location">Folie-Méricourt</p>
-                                        <i class="fa-thin fa-heart"></i>
+                                        <i class="fa-regular fa-heart"></i>
                         </a>
                     </div>
             </section>
