Passage page accueil en CSS

--- a/index.html
+++ b/index.html
@@ -47,33 +47,57 @@
                     <div class="restaurant-card__container"><!--menu 1-->
                         <a href="menu_1_la_palette_du_gout.html">
                             <img class="restaurant__img" src="images/menu_1.jpg" alt="La palette du goût"/>
-                                <h3 class="restaurant__title">La palette du goût</h3>
-                                    <p class="restaurant__location">Ménilmontant</p>
+                                <div class="restaurant__text">
+                                    <div class="restaurant__description">
+                                        <h3 class="restaurant__title">La palette du goût</h3>
+                                            <p class="restaurant__location">Ménilmontant</p>
+                                    </div>    
+                                    <div class="restaurant-favorite">
                                         <i class="fa-regular fa-heart"></i>
+                                    </div>
+                                </div>
                         </a>                
                     </div>
                     <div class="restaurant-card__container"><!--menu 2-->
                         <a href="menu_2_la_note_enchantée.html">
                             <img class="restaurant__img" src="images/menu_2.jpg" alt="La note enchantée"/>
-                                <h3 class="restaurant__title">La note enchantée</h3>
-                                    <p class="restaurant__location">Charonne</p>
+                                <div class="restaurant__text">
+                                    <div class="restaurant__description">
+                                        <h3 class="restaurant__title">La note enchantée</h3>
+                                            <p class="restaurant__location">Charonne</p>
+                                    </div>      
+                                    <div class="restaurant-favorite">
                                         <i class="fa-regular fa-heart"></i>
+                                    </div>
+                                </div>
                         </a>
                     </div>
                     <div class="restaurant-card__container"><!--menu 3-->
                         <a href="menu_3_à_la_française.html">
                             <img class="restaurant__img" src="images/menu_3.jpg" alt="À la française"/>
-                                <h3 class="restaurant__title">À la française</h3>
-                                    <p class="restaurant__location">Cité Rouge</p>
+                                <div class="restaurant__text">
+                                    <div class="restaurant__description">
+                                        <h3 class="restaurant__title">À la française</h3>
+                                            <p class="restaurant__location">Cité Rouge</p>
+                                    </div> 
+                                    <div class="restaurant-favorite">
                                         <i class="fa-regular fa-heart"></i>
+                                    </div>
+                                </div>
                         </a>
                     </div>
                     <div class="restaurant-card__container"><!--menu 4-->
                         <a href="menu_4_le_délice_des_sens.html">
                             <img class="restaurant__img" src="images/menu_4.jpg" alt="Le délice des sens"/>
-                                <h3 class="restaurant__title">Le délice des sens</h3>
-                                    <p class="restaurant__location">Folie-Méricourt</p>
+                                <div class="restaurant__text">
+                                    <div class="restaurant__description">
+                                        <h3 class="restaurant__title">Le délice des sens</h3>
+                                            <p class="restaurant__location">Folie-Méricourt</p>
+                                    </div>
+                                    <div class="restaurant-favorite">
                                         <i class="fa-regular fa-heart"></i>
+                                    </div>
+                                </div>
                         </a>
                     </div>
             </section>
@@ -81,7 +105,7 @@
         <footer><!--footer-->
             <h4 class="footer__title">ohmyfood</h4>
                 <ul>
-                    <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
+                    <li><i class="fa-solid fa-utensils"></i> Proposer un restaurant</li>
                     <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
                     <li>Mentions légales</li>
                     <li>Contact</li>
