passage en css iphone, reste à faire hover + anim

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="text-button">
                 <h1>Réservez le menu qui vous convient</h1>
                     <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-                        <button class="button--purple">Explorer nos restaurants</button>
+                        <button type="submit" class="button--purple">Explorer nos restaurants</button>
             </div>
             <section id="function"><!--liste fonctions-->
                 <h2 class="function__title">Fonctionnement</h2>
