--- a/menu_2_la_note_enchantée.html
+++ b/menu_2_la_note_enchantée.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <meta charset ="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="CSS/Styles.css">
+    <link rel="stylesheet" type="text/css" href="Sass/Styles.css">
     <link rel="stylesheet" type="text/css" href="CSS/Normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css" integrity="sha512-1hsteeq9xTM5CX6NsXiJu3Y/g+tj+IIwtZMtTisemEv3hx+S9ngaW4nryrNcPM4xGzINcKbwUJtojslX2KG+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
@@ -12,7 +12,7 @@
     <title>Menu - La note enchantée</title>
     <body>
         <header> <!--logo-->
-            <nav class="back-arrow"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></nav>
+            <nav class="back-arrow"><a href="index.html" aria-label="return to accueil"><i class="fa-solid fa-arrow-left"></i></a></nav>
                 <img class="logo" src="images/ohmyfood.png" alt="Ohmyfood"/>
         </header>
         <main><!--MENU 2 la note enchantée-->
@@ -22,86 +22,88 @@
                         <h1 class="menu-card__title">La note enchantée <i class="fa-regular fa-heart"></i></h1>
                             
                     </div>
-                    <div class="entrance"><!--les entrées-->
-                        <h2 class="meal__title">entrées</h2>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Ravioles de foie gras</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Accompagnés de leur crème à la truffe</p>
-                                            <p class="card-meal__price">25€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Caviar osciètre</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Sur blini à la farine de blé noir</p>
-                                            <p class="card-meal__price">35€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Homard et espuma de potiron</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Mariné aux zestes d'orange</p>
-                                            <p class="card-meal__price">20€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Foie gras de canard cuit entier</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Confiture de figue et pain toasté</p>
-                                            <p class="card-meal__price">35€</p>
-                                    </div>
-                            </div>
-                    </div>
-                    <div class="dish"><!--les plats-->
-                        <h2 class="meal__title">plats</h2>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Noix de coquilles Saint-Jacques</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Sur lit de purée de céleri-rave</p>
-                                            <p class="card-meal__price">40€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Langoustine poêlée</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Purée de patate douce</p>
-                                            <p class="card-meal__price">35€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Mijoté de queue de boeuf</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Et riz sauvage aux zests de citron</p>
-                                            <p class="card-meal__price">44€</p>
-                                    </div>
-                            </div>
-                    </div>
-                    <div class="dessert"><!--les desserts-->
-                        <h2 class="meal__title">desserts</h2>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Macaron noisette et chocolat</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Glace au caramel brun et sel de Guérande</p>
-                                            <p class="card-meal__price">18€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Baba au rhum revisité</h3>
-                                    <div class="overflow-text__meal">  
-                                        <p class="card-meal__desc">Avec son coulis de citron</p>
-                                            <p class="card-meal__price">22€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Tarte au citron meringuée</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Destructurée</p>
-                                            <p class="card-meal__price">23€</p>
-                                    </div>
-                            </div><!--bouton "commander"-->
-                            <button class="button--purple__meal">Commander</button>
-                    </div>
+                    <div class="menus">
+                        <div class="entrance"><!--les entrées-->
+                            <h2 class="meal__title">entrées</h2>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Ravioles de foie gras</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Accompagnés de leur crème à la truffe</p>
+                                                <p class="card-meal__price">25€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Caviar osciètre</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Sur blini à la farine de blé noir</p>
+                                                <p class="card-meal__price">35€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Homard et espuma de potiron</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Mariné aux zestes d'orange</p>
+                                                <p class="card-meal__price">20€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Foie gras de canard cuit entier</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Confiture de figue et pain toasté</p>
+                                                <p class="card-meal__price">35€</p>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="dish"><!--les plats-->
+                            <h2 class="meal__title">plats</h2>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Noix de coquilles Saint-Jacques</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Sur lit de purée de céleri-rave</p>
+                                                <p class="card-meal__price">40€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Langoustine poêlée</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Purée de patate douce</p>
+                                                <p class="card-meal__price">35€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Mijoté de queue de boeuf</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Et riz sauvage aux zests de citron</p>
+                                                <p class="card-meal__price">44€</p>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="dessert"><!--les desserts-->
+                            <h2 class="meal__title">desserts</h2>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Macaron noisette et chocolat</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Glace au caramel brun et sel de Guérande</p>
+                                                <p class="card-meal__price">18€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Baba au rhum revisité</h3>
+                                        <div class="overflow-text__meal">  
+                                            <p class="card-meal__desc">Avec son coulis de citron</p>
+                                                <p class="card-meal__price">22€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Tarte au citron meringuée</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Destructurée</p>
+                                                <p class="card-meal__price">23€</p>
+                                        </div>
+                                </div>
+                        </div>
+                    </div><!--bouton "commander"-->
+                    <button type="button" value="Commander" class="button--purple__meal button-omf">Commander</button>
             </section>
         </main>
         <footer><!--footer-->
