--- a/menu_3_à_la_française.html
+++ b/menu_3_à_la_française.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <meta charset ="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="CSS/Styles.css">
+    <link rel="stylesheet" type="text/css" href="Sass/Styles.css">
     <link rel="stylesheet" type="text/css" href="CSS/Normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css" integrity="sha512-1hsteeq9xTM5CX6NsXiJu3Y/g+tj+IIwtZMtTisemEv3hx+S9ngaW4nryrNcPM4xGzINcKbwUJtojslX2KG+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
@@ -12,7 +12,7 @@
     <title>Menu - À la française</title>
     <body>
         <header> <!--logo-->
-            <nav class="back-arrow"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></nav>
+            <nav class="back-arrow"><a href="index.html" aria-label="return to accueil"><i class="fa-solid fa-arrow-left"></i></a></nav>
                 <img class="logo" src="images/ohmyfood.png" alt="Ohmyfood"/>
         </header>
         <main><!--MENU 3 à la française-->
@@ -22,79 +22,81 @@
                         <h1 class="menu-card__title">À la française <i class="fa-regular fa-heart"></i></h1>
                             
                     </div>
-                    <div class="entrance"><!--les entrées-->
-                        <h2 class="meal__title">entrées</h2>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Tartare de poulpe acidulé</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Aux zests d'orange</p>
-                                            <p class="card-meal__price">25€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Velouté de légumes d'antan</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Carotte, panais, topinambour</p>
-                                            <p class="card-meal__price">35€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Soupe à l'oignon</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Revisitée</p>
-                                            <p class="card-meal__price">20€</p>
-                                    </div>
-                            </div>
-                    </div>
-                    <div class="dish"><!--les plats-->
-                        <h2 class="meal__title">plats</h2>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Coquilles Saint-Jacques</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Accompagnées d'une purée de panais</p>
-                                            <p class="card-meal__price">40€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Magret de canard</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Et parmentier de pommes de terres</p>
-                                            <p class="card-meal__price">35€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Pigeonneau d'Ille-et-Vilaine</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Sur son lit de gnocchis aux légumes</p>
-                                            <p class="card-meal__price">44€</p>
-                                    </div>
-                            </div>
-                    </div>
-                    <div class="dessert"><!--les desserts-->
-                        <h2 class="meal__title">desserts</h2>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Pétales de violettes glacés</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Et purée de noisettes</p>
-                                            <p class="card-meal__price">18€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Fondant au chocolat</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Revisité</p>
-                                            <p class="card-meal__price">22€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Millefeuille croustillant</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Myrtilles et pâte d'amande</p>
-                                            <p class="card-meal__price">23€</p>
-                                    </div>
-                            </div><!--bouton "commander"-->
-                            <button class="button--purple__meal">Commander</button>
-                    </div>
+                    <div class="menus">
+                        <div class="entrance"><!--les entrées-->
+                            <h2 class="meal__title">entrées</h2>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Tartare de poulpe acidulé</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Aux zests d'orange</p>
+                                                <p class="card-meal__price">25€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Velouté de légumes d'antan</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Carotte, panais, topinambour</p>
+                                                <p class="card-meal__price">35€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Soupe à l'oignon</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Revisitée</p>
+                                                <p class="card-meal__price">20€</p>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="dish"><!--les plats-->
+                            <h2 class="meal__title">plats</h2>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Coquilles Saint-Jacques</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Accompagnées d'une purée de panais</p>
+                                                <p class="card-meal__price">40€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Magret de canard</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Et parmentier de pommes de terres</p>
+                                                <p class="card-meal__price">35€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Pigeonneau d'Ille-et-Vilaine</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Sur son lit de gnocchis aux légumes</p>
+                                                <p class="card-meal__price">44€</p>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="dessert"><!--les desserts-->
+                            <h2 class="meal__title">desserts</h2>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Pétales de violettes glacés</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Et purée de noisettes</p>
+                                                <p class="card-meal__price">18€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Fondant au chocolat</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Revisité</p>
+                                                <p class="card-meal__price">22€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Millefeuille croustillant</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Myrtilles et pâte d'amande</p>
+                                                <p class="card-meal__price">23€</p>
+                                        </div>
+                                </div>
+                        </div>
+                    </div><!--bouton "commander"-->
+                    <button type="button" class="button--purple__meal">Commander</button>
             </section>
         </main>
         <footer><!--footer-->
