--- a/menu_4_le_délice_des_sens.html
+++ b/menu_4_le_délice_des_sens.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <meta charset ="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="CSS/Styles.css">
+    <link rel="stylesheet" type="text/css" href="Sass/Styles.css">
     <link rel="stylesheet" type="text/css" href="CSS/Normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css" integrity="sha512-1hsteeq9xTM5CX6NsXiJu3Y/g+tj+IIwtZMtTisemEv3hx+S9ngaW4nryrNcPM4xGzINcKbwUJtojslX2KG+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
@@ -12,7 +12,7 @@
     <title>Menu - Le délice des sens</title>
     <body>
         <header> <!--logo-->
-            <nav class="back-arrow"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></nav>
+            <nav class="back-arrow"><a href="index.html" aria-label="return to accueil"><i class="fa-solid fa-arrow-left"></i></a></nav>
                 <img class="logo" src="images/ohmyfood.png" alt="Ohmyfood"/>
         </header>
         <main><!--MENU 4 le délice des sens-->
@@ -22,79 +22,81 @@
                         <h1 class="menu-card__title">Le délice des sens <i class="fa-regular fa-heart"></i></h1>
                             
                     </div>
-                    <div class="entrance"><!--les entrées-->
-                        <h2 class="meal__title">entrées</h2>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Tartare de thon</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Assaisonné au yuzu</p>
-                                            <p class="card-meal__price">25€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Bouchée de homard croustillant</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Et sa farandole de petits légumes</p>
-                                            <p class="card-meal__price">35€</p>
-                                    </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Velouté de cèpes</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Aux truffes</p>
-                                            <p class="card-meal__price">20€</p>
-                                    </div>
-                            </div>
-                    </div>
-                    <div class="dish"><!--les plats-->
-                        <h2 class="meal__title">plats</h2>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Poulet rôti aux herbes de provence</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Et sa crème de truffe</p>
-                                            <p class="card-meal__price">40€</p>
-                                    </div>
-                                 </div>
-                                 <div class="card-meal">
-                                    <h3 class="card-meal__name">Langouste rôtie</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Et ses légumes de saison</p>
-                                            <p class="card-meal__price">35€</p>
-                                    </div>
-                                </div>
+                    <div class="menus">
+                        <div class="entrance"><!--les entrées-->
+                            <h2 class="meal__title">entrées</h2>
                                 <div class="card-meal">
-                                    <h3 class="card-meal__name">Côte de boeuf angus</h3>
+                                    <h3 class="card-meal__name">Tartare de thon</h3>
                                         <div class="overflow-text__meal">
-                                            <p class="card-meal__desc">Et sa purée de panais</p>
-                                                <p class="card-meal__price">44€</p>
+                                            <p class="card-meal__desc">Assaisonné au yuzu</p>
+                                                <p class="card-meal__price">25€</p>
                                         </div>
                                 </div>
-                    </div>
-                    <div class="dessert"><!--les desserts-->
-                        <h2 class="meal__title">desserts</h2>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Farandole de desserts</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Du chef</p>
-                                            <p class="card-meal__price">18€</p>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Bouchée de homard croustillant</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Et sa farandole de petits légumes</p>
+                                                <p class="card-meal__price">35€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Velouté de cèpes</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Aux truffes</p>
+                                                <p class="card-meal__price">20€</p>
+                                        </div>
+                                </div>
+                        </div>
+                        <div class="dish"><!--les plats-->
+                            <h2 class="meal__title">plats</h2>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Poulet rôti aux herbes de provence</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Et sa crème de truffe</p>
+                                                <p class="card-meal__price">40€</p>
+                                        </div>
                                     </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Crème brulée</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">Revisitée</p>
-                                            <p class="card-meal__price">22€</p>
+                                    <div class="card-meal">
+                                        <h3 class="card-meal__name">Langouste rôtie</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Et ses légumes de saison</p>
+                                                <p class="card-meal__price">35€</p>
+                                        </div>
                                     </div>
-                            </div>
-                            <div class="card-meal">
-                                <h3 class="card-meal__name">Tiramisu</h3>
-                                    <div class="overflow-text__meal">
-                                        <p class="card-meal__desc">À la noisette</p>
-                                            <p class="card-meal__price">23€</p>
+                                    <div class="card-meal">
+                                        <h3 class="card-meal__name">Côte de boeuf angus</h3>
+                                            <div class="overflow-text__meal">
+                                                <p class="card-meal__desc">Et sa purée de panais</p>
+                                                    <p class="card-meal__price">44€</p>
+                                            </div>
                                     </div>
-                            </div><!--bouton "commander"-->
-                            <button class="button--purple__meal">Commander</button>
-                    </div>
+                        </div>
+                        <div class="dessert"><!--les desserts-->
+                            <h2 class="meal__title">desserts</h2>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Farandole de desserts</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Du chef</p>
+                                                <p class="card-meal__price">18€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Crème brulée</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">Revisitée</p>
+                                                <p class="card-meal__price">22€</p>
+                                        </div>
+                                </div>
+                                <div class="card-meal">
+                                    <h3 class="card-meal__name">Tiramisu</h3>
+                                        <div class="overflow-text__meal">
+                                            <p class="card-meal__desc">À la noisette</p>
+                                                <p class="card-meal__price">23€</p>
+                                        </div>
+                                </div>
+                        </div>
+                    </div><!--bouton "commander"-->
+                    <button type ="button" class="button--purple__meal">Commander</button>
             </section>
         </main>
         <footer><!--footer-->
